Issue with div wrapping content

--- a/catalyst/src/TaskDisplay.css
+++ b/catalyst/src/TaskDisplay.css
@@ -1,12 +1,16 @@
-
+ 
 html, body {
     height: 100%;
     margin: 0;
     display: flex;
     color: #333;
     justify-content: center;
-    align-items: center;
+    /* align-items: center;*/
     background-color: white;
+  }
+
+  form {
+    height: fit-content;
   }
 
   h1 {
@@ -18,6 +22,7 @@ html, body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    height: fit-content;
     width: 100%;
     max-width: 100%;
     font-family: 'Arial', sans-serif;
@@ -27,6 +32,8 @@ html, body {
   .TaskDisplay ul {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
   }
   
   .TaskDisplay li {
@@ -34,6 +41,7 @@ html, body {
     border-radius: 4px;
     padding: 20px;
     margin: 10px 0;
+    width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
